cmake_minimum_required(VERSION 3.24)
project(Systems_Programming_Introduction_2023 C)

set(CMAKE_C_STANDARD 99)

add_executable(Systems_Programming_Introduction_2023 practice09/CheckParen.c practice09/IsCyclic.c practice09/LinkedList.c practice09/LinkedList.h practice09/Stack.c practice09/TestLinkedList.c practice09/TestLinkedList.h practice09/TestStack.c practice09/TestStack.c)
